--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -1,5 +1,9 @@
 version: v1
 
+deps:
+  - buf.build/googleapis/googleapis
+  - buf.build/grpc-ecosystem/grpc-gateway
+
 lint:
   use:
     - STANDARD
