--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-proto-repo-client",
+  "name": "my_proto_repo-client",
   "version": "1.0.0",
   "description": "TypeScript client for proto services",
   "main": "index.js",
